# CppProjects

./: .gitignore  .gitmodules
BankDB-Remake/: Cargo.toml
BankDB-Remake/data/: user_logo.txt
BankDB-Remake/migrations/: 0001_transactions_table.sql  0002_clients_table.sql  0003_transactions_trigger.sql
BankDB-Remake/src/: event.rs  main.rs  model.rs  tui.rs  ui.rs  update.rs
BankDB-Remake/src/model/: admin.rs  app.rs  app_list.rs  client.rs  common.rs  help_text.rs  mod.rs
BankDB-Remake/src/ui/: admin.rs  client.rs  common_fn.rs  login.rs  mod.rs
BankDB-Remake/src/update/: admin.rs  cleanup.rs  client.rs  common.rs  common_fn.rs  list.rs  mod.rs
CMakeExample/: CMakeLists.txt  compile.bat  compile.sh
CMakeExample/src/: main.cpp
GoogleImagesScraper/: a.txt  main.git.py  main.py
Rain/: rain.cpp
RainAnimation/: rain.cpp
RatatuiExample/counter_app/src/: app.rs  event.rs  main.rs  ui.rs  update.rs
RatatuiExample/json_editor/: Cargo.toml
RatatuiExample/json_editor/src/: app.rs  main.rs  ui.rs
RatatuiExample/old_tv/: Cargo.toml
RatatuiExample/old_tv/data/: lain_light.txt  lain_light_shift.txt  lain_shift.txt
RatatuiExample/old_tv/src/: app.rs  lib.rs  main.rs  ui.rs
RatatuiExample/old_tv/src/data/: ferris.txt  ferris_light.txt  ferris_shift_r.txt  lain.txt
RatatuiExamples/: README.md
RatatuiExamples/counter_app/: Cargo.toml
RatatuiExamples/counter_app/src/: lib.rs  main.rs  tui.rs
RatatuiExamples/dither_wave/: Cargo.toml  dither_wave.tape
RatatuiExamples/dither_wave/data/: lain.txt  lain_light.txt  lain_light_shift.txt  lain_shift.txt
RatatuiExamples/dither_wave/src/: main.rs  ui.rs
RatatuiExamples/hello_world/: Cargo.toml
RatatuiExamples/hello_world/src/: main.rs
RatatuiExamples/json_editor/src/: app.rs
RustWebserver/backend/: Cargo.toml  file.txt
RustWebserver/backend/migrations/: 20240611183725_users_table.up.sql
RustWebserver/backend/src/: lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
RustWebserver/backend/src/routes/: mod.rs
RustWebserver/backend/src/routes/users/: login.rs  (+4 more)
RustWebserver/backend/src/types/: general.rs  mod.rs  users.rs
RustWebserver/backend/src/utils/: emails.rs  mod.rs
RustWebserver/frontend/: .gitignore  package.json  vite.config.ts
RustWebserver/frontend/src/routes/: +layout.ts
ThesisRecordBuilder/data_ex/in/calendars/: 001-2017-A.docx
ThesisRecordBuilder/data_ex/in/format/: footer.docx  header.docx
ThesisRecordBuilder/src/: date.py  docx_data.py  format_copy.py  main.py  misc.py  requirements.txt  verdicts_data.py  xlsx_data.py
thesis-continuous-evaluation-builder/src/: main.py
(+11 files in other folders)
