[package]
name = "BankDB-Remake"
version = "0.1.0"
edition = "2021"

[features]
debug_derive = []
default = ["debug_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "rust_decimal"] }
ratatui = "0.25.0"
crossterm = "0.27.0"
anyhow = "1.0.77"
tui-input = "0.8.0"
bcrypt = "0.15.0"
rust_decimal = "1.33.1"
